# playlet-clip

./: .env.example  .gitignore  README.md  char2voice.py  chatgpt.py  check.py  client_requirements.txt  conf.py  coordinate.py  create_task.py  main.py  manage_tasks.py  pyproject.toml  requirements.txt  server.py  test.srt  utils.py
.claude/: settings.local.json
config/: config.example.yaml
config/prompts/: narrator.txt
docker/: Dockerfile  Dockerfile.cpu  docker-compose.cpu.yml  docker-compose.yml
scripts/: install_cosyvoice.sh  run_tests.sh
src/playlet_clip/: __init__.py  main.py
src/playlet_clip/core/: __init__.py  config.py  exceptions.py  pipeline.py
src/playlet_clip/models/: __init__.py  segment.py  subtitle.py  task.py
src/playlet_clip/services/: __init__.py  asr.py  llm.py  tts.py  video.py
src/playlet_clip/ui/: __init__.py  app.py
src/playlet_clip/utils/: __init__.py  ffmpeg.py  srt.py  time.py
tests/: __init__.py  conftest.py  test_01_asr.py  test_02_tts.py  test_03_llm.py  test_04_video.py  test_05_pipeline.py  test_06_editing.py
